Final implementation of new color scheme

--- a/src/igz_controls/components/action-checkbox/action-checkbox.less
+++ b/src/igz_controls/components/action-checkbox/action-checkbox.less
@@ -1,4 +1,6 @@
 .action-checkbox {
+    .action-checkbox-color-set();
+
     line-height: 16px;
     text-align: center;
 
@@ -9,11 +11,11 @@
         vertical-align: middle;
 
         &.igz-icon-checkbox-unchecked {
-            color: @mountain-mist;
+            color: @icon-checkbox-unchecked;
         }
 
         &.igz-icon-checkbox-checked {
-            color: @dark-sky-blue;
+            color: @icon-checkbox-checked;
         }
     }
 }
