--- a/src/igz_controls/components/slider-input-block/slider-input-block.less
+++ b/src/igz_controls/components/slider-input-block/slider-input-block.less
@@ -88,10 +88,10 @@
         }
 
         .igz-slider-input-current-value-text {
-            color: #252d36;
+            color: @slider-input-current-value-text-color;
             font-size: 13px;
             font-weight: 400;
-            background-color: @slider-input-current-value-text;
+            background-color: @slider-input-current-value-text-bg-color;
             text-align: right;
         }
     }
@@ -112,7 +112,7 @@
 
             .default-dropdown-field {
                 border: none;
-                background-color: @default-dropdown-field-color;
+                background-color: @default-dropdown-field-bg-color;
 
                 .dropdown-selected-item {
                     padding-left: 0;
