--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -583,11 +583,15 @@
 }
 
 .status-up {
-    background: @tealish;
+    .icons-color-set();
+
+    background: @status-up-bg;
 }
 
 .status-down {
-    background: @darkish-pink;
+    .icons-color-set();
+
+    background: @status-down-bg;
 }
 
 .status-marker {
