--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
@@ -2,7 +2,7 @@
     background: @pale-white;
     height: 55px;
     border-top: none;
-    border-bottom: 1px solid @border-color;
+    border-bottom: 1px solid @mystic-two;
 
     .navigation-tab {
         position: relative;
