--- a/src/igz_controls/components/action-checkbox-all/action-checkbox-all.less
+++ b/src/igz_controls/components/action-checkbox-all/action-checkbox-all.less
@@ -1,15 +1,17 @@
 .action-checkbox-all {
+    .action-checkbox-all-color-set();
+
     text-align: center;
 
     .check-item {
         cursor: pointer;
-        color: @mountain-mist;
+        color: @check-item-color;
         font-size: 16px;
         line-height: 1;
         vertical-align: middle;
 
         &.igz-icon-checkbox-checked {
-            color: @dark-sky-blue;
+            color: @check-item-icon-checkbox-checked-color;
         }
     }
 }
