--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -1,5 +1,6 @@
 .igz-action-menu {
     .action-menu-color-set();
+    .action-icon-color-set();
 
     opacity: 1;
     position: relative;
@@ -10,7 +11,7 @@
         font-size: 18px;
         height: 19px;
         text-align: center;
-        transition: @menu-btn-color-transition;
+        transition: @igz-basic-transition-color;
         width: 30px;
 
         &.active,
@@ -22,10 +23,10 @@
     .menu-dropdown {
         visibility: hidden;
         background-color: @menu-dropdown-bg-color;
-        border: 1px solid @menu-dropdown-border-color;
+        border: @menu-dropdown-border;
         border-radius: 2px;
         box-shadow: @menu-dropdown-box-shadow;
-        color: black;
+        color: @menu-dropdown-color;
         font-family: @font-family-sans-serif;
         font-size: 13px;
         font-weight: 500;
@@ -68,8 +69,6 @@
             }
 
             .action-icon {
-                .action-icon-color-set();
-
                 color: @action-icon-hover-color;
                 display: inline-block;
                 padding-right: 14px;
@@ -92,7 +91,7 @@
             padding-bottom: 8px;
 
             &:not(.first-block) {
-                border-top: 1px solid @shortcuts-list-not-first-block-border-color;
+                border-top: @shortcuts-list-not-first-block-border;
                 padding-top: 8px;
             }
         }
@@ -115,7 +114,7 @@
             line-height: 32px;
             padding: 0 26px 0 32px;
             text-align: left;
-            transition: @shortcuts-item-transition;
+            transition: @igz-basic-transition-color;
 
             &:hover {
                 background-color: @shortcuts-item-hover-bg-color;
