--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -8,7 +8,7 @@
     height: 36px;
     position: relative;
     background-color: @number-input-bg-color;
-    border: solid 1px @number-input-border-color;
+    border: @number-input-border;
     border-radius: 2px;
     color: @number-input-color;
     display: flex;
@@ -20,24 +20,24 @@
     &:not(.disabled) {
         &:focus.ng-invalid:not(.ng-pristine), &.ng-invalid.ng-touched {
             background-color: @number-input-not-disabled-focus-invalid-bg-color;
-            border: solid 1px @number-input-not-disabled-focus-invalid-border-color;
+            border: @number-input-not-disabled-focus-invalid-border;
             box-shadow: none;
             outline: none;
         }
 
         &:hover, &:focus {
             outline: 0;
-            border: solid 1px @number-input-not-disabled-hover-focus-border-color;
+            border: @number-input-not-disabled-hover-focus-border;
         }
 
         &.invalid:not(.pristine), &.invalid.submitted {
             background-color: @number-input-not-disabled-invalid-bg-color;
-            border: solid 1px @number-input-not-disabled-invalid-border-color;
+            border: @number-input-not-disabled-invalid-border;
             box-shadow: none;
         }
 
         &:focus.ng-valid, &:focus.ng-pristine {
-            border: solid 1px @number-input-not-disabled-valid-border-color;
+            border: @number-input-not-disabled-valid-border;
             box-shadow: none;
             outline: none;
         }
@@ -52,7 +52,7 @@
         outline: 0;
         padding: 0;
         text-align: left;
-        background-color: transparent;
+        background-color: @number-input-field-bg-color;
         max-width: 100%;
     }
 
