--- a/src/igz_controls/components/search-input/search-input.less
+++ b/src/igz_controls/components/search-input/search-input.less
@@ -1,10 +1,11 @@
-@unfocused: #5a82a2;
-
 .search-input {
+    .search-input-color-set();
+
     position: relative;
-    color: @unfocused;
+    color: @search-input-color;
+
     .container-search-input {
-        background-color: transparent;
+        background-color: @search-input-bg-color;
         border: 0;
         font-family: @font-family-sans-serif;
         font-size: 15px;
@@ -17,40 +18,40 @@
         width: 100%;
 
         &::-webkit-input-placeholder {
-            color: @unfocused;
+            color: @search-input-placeholder-color;
         }
 
         &:-moz-placeholder { /* Firefox 18- */
-            color: @unfocused;
+            color: @search-input-placeholder-color;
         }
 
         &::-moz-placeholder {  /* Firefox 19+ */
-            color: @unfocused;
+            color: @search-input-placeholder-color;
         }
 
         &:-ms-input-placeholder {
-            color: @unfocused;
+            color: @search-input-placeholder-color;
         }
 
         &:focus {
             &, & + .igz-icon-search:before {
-                color: #252d36;
+                color: @search-input-focus-icon-search-before-color;
             }
 
             &::-webkit-input-placeholder {
-                color: transparent;
+                color: @search-input-focus-placeholder-color;
             }
 
             &:-moz-placeholder { /* Firefox 18- */
-                color: transparent;
+                color: @search-input-focus-placeholder-color;
             }
 
             &::-moz-placeholder {  /* Firefox 19+ */
-                color: transparent;
+                color: @search-input-focus-placeholder-color;
             }
 
             &:-ms-input-placeholder {
-                color: transparent;
+                color: @search-input-focus-placeholder-color;
             }
         }
     }
@@ -71,10 +72,10 @@
         right: 4px;
         top: 17px;
         cursor: pointer;
-        color: white;
+        color: @clear-button-color;
         padding: 4px 5px 2px;
         opacity: 0.64;
-        background-color: @silver;
+        background-color: @clear-button-bg-color;
         border-radius: 50%;
         line-height: initial;
 
@@ -89,6 +90,8 @@
 }
 
 .search-input-actions-bar {
+    .search-input-color-set();
+
     position: relative;
     .container-search-input {
         border: 0;
@@ -103,7 +106,7 @@
     }
 
     .igz-icon-search {
-        color: @bright-turquoise;
+        color: @search-input-actions-bar-icon-search-color;
         font-size: 16px;
         height: 16px;
         position: absolute;
@@ -119,7 +122,9 @@
 }
 
 .search-input-not-found {
-    color: @dusk-three;
+    .search-input-color-set();
+
+    color: @search-input-not-found-color;
     font-family: @font-family-sans-serif;
     font-size: 14px;
     display: flex;
@@ -134,7 +139,7 @@
         width: 100%;
         text-align: center;
         letter-spacing: 0.1px;
-        border: 1px solid @pale-grey;
+        border: @search-input-not-found-message-border;
     }
 
     .create-item-button {
@@ -144,18 +149,18 @@
         margin-top: 8px;
         border-radius: 12px;
         height: 24px;
-        color: @white;
+        color: @create-item-btn-color;
         font-size: 12px;
         font-weight: bold;
         cursor: pointer;
-        background-color: @dark-sky-blue;
-        border: solid 1px @dark-sky-blue;
+        background-color: @create-item-btn-bg-color;
+        border: @create-item-btn-border;
         text-transform: uppercase;
 
         &:hover {
-            background-color: @lightblue;
-            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
-            border: solid 1px @lightblue;
+            background-color: @create-item-btn-hover-bg-color;
+            box-shadow: @create-item-btn-hover-box-shadow;
+            border: @create-item-btn-hover-border;
         }
 
         &:focus {
@@ -163,8 +168,8 @@
         }
 
         &:active {
-            background-color: @bluish;
-            box-shadow: inset 0.4px 1.9px 3px 0 rgba(0, 0, 0, 0.2);
+            background-color: @create-item-btn-active-bg-color;
+            box-shadow: @create-item-btn-active-box-shadow;
             border: none;
         }
 
