--- a/src/igz_controls/components/splash-screen/splash-screen.less
+++ b/src/igz_controls/components/splash-screen/splash-screen.less
@@ -1,9 +1,11 @@
 .splash-screen {
+    .splash-screen-color-set();
+
     position: absolute;
     z-index: 996;
     width: 100%;
     height: 100%;
-    background-color: rgba(37, 45, 54, 0.9);
+    background-color: @splash-screen-bg-color;
     transform-style: preserve-3d;
 
     // ngAnimate appearance for show/hide
@@ -18,13 +20,13 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        color: @white;
+        color: @loading-splash-screen-color;
         font-size: 20px;
         text-align: center;
         font-weight: 500;
         width: 217px;
         border-radius: 6px;
-        background-image: linear-gradient(144deg, @dark-sky-blue, @lightblue), linear-gradient(@dark-sky-blue, @dark-sky-blue);
+        background-image: @loading-splash-screen-bg-image;
         padding: 49px 0;
 
         .splash-logo-wrapper {
@@ -41,7 +43,7 @@
             padding: 31px 0 0 12px;
             font-family: @font-family-sans-serif;
             font-size: 20px;
-            color: @white;
+            color: @loading-splash-screen-text-color;
         }
     }
 
@@ -50,12 +52,12 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        color: @white;
+        color: @alert-splash-screen-color;
         font-size: 20px;
         font-weight: 500;
         width: 504px;
         border-radius: 6px;
-        background-image: linear-gradient(144deg, @dark-sky-blue, @lightblue), linear-gradient(@dark-sky-blue, @dark-sky-blue);
+        background-image: @alert-splash-screen-bg-image;
         box-shadow: none;
         padding: 0 0 49px;
 
@@ -67,7 +69,7 @@
         }
 
         .notification-text {
-            color: @white;
+            color: @alert-splash-screen-notification-text-color;
             padding: 0 60px;
             text-align: center;
             margin: 0 0 36px;
@@ -85,13 +87,13 @@
                 width: 124px;
                 font-size: 12px;
                 border-radius: 2px;
-                background-color: @dark-sky-blue;
-                border: solid 1px @white;
+                background-color: @alert-splash-screen-refresh-btn-bg-color;
+                border: @alert-splash-screen-refresh-btn-border;
                 text-transform: uppercase;
 
                 &:hover {
-                    background-color: @bluish;
-                    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+                    background-color: @alert-splash-screen-refresh-btn-hover-bg-color;
+                    box-shadow: @alert-splash-screen-refresh-btn-hover-box-shadow;
                 }
 
                 .igz-icon-refresh {
