--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -21,14 +21,14 @@
     justify-content: center;
 
     .ngdialog-content {
-        box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.25);
+        box-shadow: @ngdialog-box-shadow;
         animation-duration: @animation-duration;
         animation-timing-function: @animation-function;
         font-family: @font-family-sans-serif;
         font-size: 16px;
         border-radius: 2px;
         max-width: 900px;
-        background-color: @white;
+        background-color: @ngdialog-bg-color;
         z-index: 5;
         position: relative;
         padding: 19px 24px 23px 24px;
@@ -77,18 +77,17 @@
          */
 
         .close-button {
-            .duskThree(0.64);
             position: absolute;
             right: 24px;
             top: 26px;
             line-height: 10px;
             font-size: 14px;
-            color: @color;
+            color: @ngdialog-close-btn-color;
             cursor: pointer;
         }
 
         .title {
-            color: @dusk-three;
+            color: @ngdialog-title-color;
             font-family: @font-family-sans-serif;
             font-size: 20px;
             font-weight: 500;
@@ -118,16 +117,16 @@
                     cursor: pointer;
 
                     &:before {
-                        color: @icon-help-before-color;
-                        background-color: @icon-help-before-bg-color;
+                        color: @ngdialog-icon-help-before-color;
+                        background-color: @ngdialog-icon-help-before-bg-color;
                         border-radius: 50%;
                         font-size: 18px;
                     }
 
                     &:hover {
                         &:before {
-                            color: @icon-help-hover-before-color !important;
-                            background-color: @icon-help-hover-before-bg-color !important;
+                            color: @ngdialog-icon-help-hover-before-color !important;
+                            background-color: @ngdialog-icon-help-hover-before-bg-color !important;
                         }
 
                         + div {
@@ -149,7 +148,7 @@
                 .row-description {
                     position: absolute;
                     font-family: @font-family-sans-serif;
-                    color: @row-description-color;
+                    color: @ngdialog-row-description-color;
                     font-size: 12px;
                     padding: 0;
                     margin-left: 8px;
@@ -160,7 +159,7 @@
 
                 .field-label {
                     display: flex;
-                    color: @dusk-three;
+                    color: @ngdialog-field-label-color;
                     font-size: 16px;
                     font-weight: 400;
                     padding: 0;
@@ -183,7 +182,7 @@
 
                     .href-link {
                         font-family: @font-family-sans-serif;
-                        color: @bright-turquoise;
+                        color: @ngdialog-field-input-link-color;
                         font-size: 14px;
                         font-weight: 400;
                         line-height: 16px;
@@ -202,7 +201,7 @@
                     }
 
                     .error {
-                        color: @darkish-pink;
+                        color: @ngdialog-field-input-error-color;
                         font-size: 12px;
                         position: absolute;
                         top: -15px;
@@ -225,7 +224,7 @@
 
                         .icon-font-primary-key, .icon-font-partition-key {
                             &:before {
-                                color: #5a82a2;
+                                color: @ngdialog-field-input-list-icon-before-color;
                                 margin-right: 6px;
                                 width: 16px;
                                 text-align: center;
@@ -236,7 +235,7 @@
 
                 .field-description {
                     font-family: @font-family-sans-serif;
-                    color: #5a82a2;
+                    color: @ngdialog-field-input-field-description-color;
                     font-size: 12px;
                     font-style: italic;
                     line-height: 14px;
@@ -250,12 +249,12 @@
 
     &.oops-dialog {
         .ngdialog-content {
-            color: @white;
+            color: @oops-dialog-color;
             font-size: 20px;
             font-weight: 500;
             width: 504px;
             border-radius: 6px;
-            background-image: linear-gradient(144deg, @dark-sky-blue, @lightblue), linear-gradient(@dark-sky-blue, @dark-sky-blue);
+            background-image: @oops-dialog-bg-image;
             box-shadow: none;
             padding: 0 0 49px;
 
@@ -267,7 +266,7 @@
             }
 
             .notification-text {
-                color: @white;
+                color: @oops-dialog-notification-text-color;
                 padding: 0 60px;
                 text-align: center;
                 margin: 0 0 36px;
@@ -285,13 +284,13 @@
                     width: 124px;
                     font-size: 12px;
                     border-radius: 2px;
-                    background-color: @dark-sky-blue;
-                    border: solid 1px @white;
+                    background-color: @oops-dialog-refresh-btn-bg-color;
+                    border: @oops-dialog-refresh-btn-border;
                     text-transform: uppercase;
 
                     &:hover {
-                        background-color: @oops-dialog-refresh-button-hover-bg-color;
-                        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+                        background-color: @oops-dialog-refresh-btn-hover-bg-color;
+                        box-shadow: @oops-dialog-refresh-btn-hover-box-shadow;
                     }
 
                     .igz-icon-refresh {
@@ -330,8 +329,8 @@
     }
 
     .ngdialog-overlay {
-        background: rgba(0, 0, 0, 0.6);
-        border: 2px solid #000000;
+        background: @ngdialog-overlay-bg;
+        border: @ngdialog-overlay-border;
         animation-duration: @animation-duration;
         animation-timing-function: @animation-function;
     }
