--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -11,12 +11,14 @@ html {
 }
 
 body {
+    .general-rules-color-set();
+
     position: absolute;
     width: 100%;
     left: 0;
     height: 100%;
     min-width: 800px;
-    background-color: @pale-white;
+    background-color: @body-bg-color;
     overflow: hidden;
     font-family: @font-family-sans-serif;
 
@@ -54,7 +56,7 @@ body {
 
     &.login, &.forgot-password, &.reset-password {
         .container-fluid {
-            background: @mystic;
+            background: @login-bg;
         }
     }
 }
@@ -96,11 +98,13 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
 }
 
 .igz-main-view {
+    .general-rules-color-set();
+
     header {
         padding: 11px 0 10px;
 
         .breadcrumbs {
-            color: #fff;
+            color: @header-breadcrumbs-color;
             font-weight: 400;
             font-size: 1.2em;
         }
@@ -112,6 +116,8 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
 }
 
 .mCSB_inside {
+    .general-rules-color-set();
+
     > .mCSB_container {
         margin-bottom: 0 !important;
         margin-right: 0 !important;
@@ -127,7 +133,7 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
 
     > .mCS-dark.mCSB_scrollTools {
         .mCSB_dragger_bar {
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: @scrollbar-dragger-bar-bg-color;
         }
     }
 
@@ -137,12 +143,14 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
 }
 
 .modal-backdrop {
+    .general-rules-color-set();
+
     position: absolute;
     bottom: 0;
     top: 0;
     right: 0;
     left: 0;
-    background-color: @modal-backdrop-bg;
+    background-color: @modal-backgrop-bg-color;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
