--- a/src/igz_controls/components/default-dropdown/default-dropdown.less
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.less
@@ -209,7 +209,7 @@
                     background-color: @default-dropdown-container-list-item-hover-focus-bg-color;
                 }
 
-                .list-item-description {
+                &.list-item-description {
                     padding: 5px 0;
                 }
 
