--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -5,6 +5,7 @@
         <div igz-monaco-editor
              data-code-file="selectedCodeFile"
              data-editor-theme="$ctrl.selectedTheme"
+             data-file-language="selectedFileLanguage"
              data-mini-monaco="$ctrl.miniMonaco"
              data-show-line-numbers="$ctrl.showLineNumbers"
              data-read-only="$ctrl.readOnly"
